:hover can work now on mobile using :active in css

--- a/index.html
+++ b/index.html
@@ -6,14 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <title>Happy Birthday Fatiii</title>
-    <style>
-        @font-face {
-            font-family: Roboto; src: url("chrome-extension://mcgbeeipkmelnpldkobichboakdfaeon/css/Roboto-Regular.ttf");
-        }
-    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body ontouchstart="">
     <div class="body">
         <div class="birthdayCard">
             <div class="cardFront"><h3 class="happy" style="color: snow;"><div style="color: black; font-size: 15px;">Belated</div> HAPPY BIRTHDAY!</h3>
