--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         </div>
         <div class="cardInside">
             <h3 class="back">HAPPY BIRTHDAY!</h3>
-            <p>Fatiii habibte ente manne nese walla!</p> 
-            <p>Happy birthday!! I hope your life to be filled with lots of love and laughter! May all of your birthday wishes come true.</p>
+            <p>Happy birthday!!</p> 
+            <p>I hope your life to be filled with lots of love and laughter! May all of your birthday wishes come true.</p>
             <p class="name">Tuti</p>
         </div>
     </div>
